--- a/P-project/style.css
+++ b/P-project/style.css
@@ -1,4 +1,4 @@
-header{height: 40px; background-color: black; border: 1px solid black;
+header{height: 42px; background-color: black; border: 1px solid black;
     position: fixed;width: 100%; z-index: 9999; top: 0; left: 0;}
     *{margin: 0; padding: 0;}
 
@@ -12,6 +12,7 @@ header{height: 40px; background-color: black; border: 1px solid black;
     }
     .topmenu{
         float: left;
+        z-index: 9998;
     }
     .submenu1{
         position: absolute;
@@ -83,13 +84,14 @@ header{height: 40px; background-color: black; border: 1px solid black;
         width: 100%;
         background-color: brown;
         margin: 44px auto;
+        position: absolute;
     }
     .top-info-menu{    
         border-bottom: 1px solid black;
         background-color: brown;
         height: 100px; width: 1920px; 
         margin: 0 auto;
-        z-index: 10;
+        z-index: 9997;
         position: fixed;
     }
     .top-info-h1{
@@ -105,10 +107,11 @@ header{height: 40px; background-color: black; border: 1px solid black;
         float: left;
     }
     .bodymenu{
-        float: right;        
+        float: right;  
+        z-index: 9997;      
     }
     .bodymenu > li{
-        float: left; list-style: none; font-size: large;
+        float: left; list-style: none; font-size: 1.2em;
         font-family: 'Noto Serif KR', serif;
         font-weight: bolder;
         padding: 30px 40px; display: block;
@@ -129,7 +132,7 @@ header{height: 40px; background-color: black; border: 1px solid black;
     
      .info-sub-menu{
          position: absolute;
-         background-color:rgba(051, 051, 051,0.9);
+         background-color:rgba(051, 051, 051);
          opacity: 0;
          visibility: hidden;
          transition: all 0.15s ease-in;
@@ -155,4 +158,19 @@ header{height: 40px; background-color: black; border: 1px solid black;
     }
     .info-sub-menu > li > a:hover{
         text-decoration: underline;
+    }
+
+    #contents{
+        clear: both;
+        margin-top: 500px;
+    }
+    #contents table tr td img {
+        width: 170px;
+        height: 300px;
+        margin: 10px;
+        opacity: 1.0;
+    }
+    #contents table tr td img:hover {
+        opacity: 1.0;
+        box-shadow: 0.5px 0.5px 5px white;
     }
