--- a/자율동아리/카드 설명창 CSS.css
+++ b/자율동아리/카드 설명창 CSS.css
@@ -163,7 +163,6 @@ body {
     -webkit-text-size-adjust: none;
 }
 
-
 /* legend,caption,메뉴제목,섹션제목 블라인드 */
 .blind,
 caption,
@@ -302,7 +301,7 @@ body.on {
     line-height: 38px;
 }
 /*main_header 영역 Css*/
-#main{
+#main {
     background-color: #888;
     background-image: linear-gradient(45deg, #444 25%, transparent 25%, transparent 75%, #444 75%, #444), linear-gradient(-45deg, #444 25%, transparent 25%, transparent 75%, #444 75%, #444);
     background-size: 25px 25px;
@@ -315,15 +314,17 @@ body.on {
     background-color: rgba(00, 00, 00, 0.8);
     text-align: center;
 }
-#main_header > h2{
+#main_header > h2 {
     color: white;
     font-size: 3em;
     font-weight: bold;
     white-space: nowrap;
     margin-right: 350px;
+    margin-top: 50px;
     font-family: "nexon bold";
+    display: inline-block;
 }
-#main_header > p{
+#main_header > p {
     color: white;
     font-size: 1.4em;
     font-weight: normal;
@@ -332,13 +333,17 @@ body.on {
     margin-top: 90px;
     font-family: "nexon gothic";
 }
-#main_header > img{
+#main_header > img {
     height: 220px;
     margin: 70px 0 0 500px;
     float: left;
     padding-right: 50px;
 }
-
+/*CARD_INFO 영역 CSS*/
+#card_info{
+    height: 1000px;
+    background-color: wheat;
+}
 
 /*footer 영역 Css*/
 #footer {
