카테고리 탭 추가 및 등급 설명 부분 추가 카드 이름 부분 수정

--- a/P-project/style.css
+++ b/P-project/style.css
@@ -111,11 +111,12 @@ header{height: 42px; background-color: black; border: 1px solid black;
         z-index: 9997;      
     }
     .bodymenu > li{
-        float: left; list-style: none; font-size: 1.2em;
+        float: left; list-style: none;
+        font-size: 1.2em;
         font-family: 'Noto Serif KR', serif;
         font-weight: bolder;
-        padding: 30px 40px; display: block;
-        
+        padding: 30px 40px; 
+        display: block;
     }
     .bodymenu > li > a{
         text-decoration: none;
